  which no smoother is penalized. Also there is no option to use the identical
  discretization to that used in fitting.


1.8-34

* 'gam.mh' proposal df typo fix and help file '%*%' -> '\%*\*' fix. Thanks 
   Len Thomas.

* various random number generation calls in rd functions in families could 
  fail if simulating one point - fixed.

1.8-33

* 'inline' -> 'statc inline' error fix - caused installation failure on some 
   platforms.  

1.8-32

** bam(...,discrete=TRUE) now uses discretization on the parametric model
   components as well as the smooths. 

* 'gumbls' family added for Gumbel location scale models.

* 'shash' location scale and shape family added.

* psum.chisq function added to compute c.d.f. of weighted sums of chi-squared
  r.v.s using method of Davies, 1980. This is now used for computing p-values 
  in summary.gam in place of the Liu et al, 2009 approximation.  

* score and Schoenfeld residuals added for cox.ph to facilitate PH assumption
  checking (see ?cox.ph).

* added 'gam.mh' for posterior dampling from models fitted with 'gam'.

* 'ocat' upgraded to not ignore weights.

* added multivariate t and Gaussian densities and multivariate t generation. 

* fix to predict.bamd to correct handling of `terms' and `exclude' arguments.

* A recent lme change broke gamm offset handling. Fixed. 
  Thanks Aaron Benjamin Shev.

* dgesvd LAPACK calls replaced by faster dgesdd, as some versions of MKL
  BLAS/LAPACK have broken dgesvd.

* Fix to derivative w.r.t. scale parameter calculation for extended families 
  ('tw' is the only one at present) when using 'ML' smoothing parameter
  estimation. Could lead to step failure with 'tw'. Thanks Kevin Hawkshaw. 

* Fix to prediction/fake formula environment that could cause failure of
  gam/bam called from a function. Thanks to Duncan Murdoch.

* Fix to smoothing parameter uncertainy correction for general families.

* Much cleaner design for the discretization of covariates and associated 