@@ -3177,9 +3177,10 @@ Predict.matrix.duchon.spline <- function(object,data)
 ##################################################
 
 
-gpT <- function(x) {
+gpT <- function(x,defn) {
 ## T matrix for Kamman and Wand Matern Spline...
-  cbind(x[,1]*0+1,x)
+## defn[1] < 0 signals no linear terms
+  if (defn[1]<0) x[,1]*0+1 else cbind(x[,1]*0+1,x)
 } ## gpT
 
 gpE <- function(x,xk,defn = NA) {
@@ -3189,8 +3190,12 @@ gpE <- function(x,xk,defn = NA) {
   ## get d[i,j] the Euclidian distance from x[i] to xk[j]... 
   E <- matrix(sqrt(rowSums((x[ind$x,,drop=FALSE]-xk[ind$xk,,drop=FALSE])^2)),nrow(x),nrow(xk))
   rho <- -1; k <- 1
+  sign.type <- 1
   if ((length(defn)==1&&is.na(defn))||length(defn)<1) { type <- 3 } else
-  if (length(defn)>0) type <- round(defn[1])
+  if (length(defn)>0) {
+    type <- abs(round(defn[1]))
+    sign.type <- sign(defn[1])
+  } 
   if (length(defn)>1) rho <- defn[2]
   if (length(defn)>2) k <- defn[3]
 
@@ -3205,7 +3210,7 @@ gpE <- function(x,xk,defn = NA) {
 	      eE + (E*eE)*(1+E/3), ## 4 Matern k = 2.5
 	      eE + (E*eE)*(1+.4*E+E^2/15) ## 5 Matern k = 3.5
 	     )
-  attr(E,"defn") <- c(type,rho,k)
+  attr(E,"defn") <- c(sign.type*type,rho,k)
   E
 } ## gpE
 
@@ -3214,6 +3219,13 @@ smooth.construct.gp.smooth.spec <- function(object,data,knots)
 ## See also Handcock, Meier and Nychka (1994), and Handcock and Stein (1993).
 { ## deal with possible extra arguments of "gp" type smooth
   xtra <- list()
+
+  ## object$p.order[1] < 0 signals stationary version
+  if ((length(object$p.order)==1&&is.na(object$p.order))||length(object$p.order)<1) {
+    stationary <- FALSE
+  } else {
+    stationary <- object$p.order[1] < 0
+  }
 
   if (is.null(object$xt$max.knots)) xtra$max.knots <- 2000 
   else xtra$max.knots <- object$xt$max.knots 
@@ -3297,7 +3309,7 @@ smooth.construct.gp.smooth.spec <- function(object,data,knots)
     object$bs.dim <- ncol(knt)+2
     warning("basis dimension reset to minimum possible")
   }
-  object$null.space.dim <- ncol(knt) + 1
+  object$null.space.dim <- if (stationary) 1 else ncol(knt) + 1
   
   k <- object$bs.dim - object$null.space.dim   
 
@@ -3345,22 +3357,25 @@ Predict.matrix.gp.smooth <- function(object,data)
  
   if (n > nk) { ## split into chunks to save memory
     n.chunk <- n %/% nk
+    k0 <- 1
     for (i in 1:n.chunk) { ## build predict matrix in chunks
       ind <- 1:nk + (i-1)*nk
       Xc <- gpE(x=x[ind,,drop=FALSE],xk=object$knt,object$gp.defn)
-      Xc <- cbind(Xc%*%object$UZ,gpT(x=x[ind,,drop=FALSE]))
-      if (i == 1) X <- Xc else { X <- rbind(X,Xc);rm(Xc)}
+      Xc <- cbind(Xc%*%object$UZ,gpT(x=x[ind,,drop=FALSE],object$gp.defn))
+      if (i == 1) X <- matrix(0,n,ncol(Xc))
+      X[ind,] <- Xc
     } ## finished size nk chunks
 
     if (n > ind[nk]) { ## still some left over
       ind <- (ind[nk]+1):n ## last chunk
       Xc <- gpE(x=x[ind,,drop=FALSE],xk=object$knt,object$gp.defn)
-      Xc <- cbind(Xc%*%object$UZ,gpT(x=x[ind,,drop=FALSE]))
-      X <- rbind(X,Xc);rm(Xc)
+      Xc <- cbind(Xc%*%object$UZ,gpT(x=x[ind,,drop=FALSE],object$gp.defn))
+      X[ind,] <- Xc
+      #X <- rbind(X,Xc);rm(Xc)
     }
   } else {
     X <- gpE(x=x,xk=object$knt,object$gp.defn)
-    X <- cbind(X%*%object$UZ,gpT(x=x))
+    X <- cbind(X%*%object$UZ,gpT(x=x,object$gp.defn))
   }
   X 
 } ## end of Predict.matrix.gp.smooth
